adicionando catalogo de produto e docker compose com banco de dados e o grafana para monitoramento da base